# msx-charset

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
msx_charset/: __init__.py  _version.py  codec_base.py  codec_br.py  codec_intl.py  codec_jp.py
msx_charset/tests/: __init__.py  test_charset_intl.py
tests/: __init__.py  test_charset_br.py  test_charset_intl.py  test_charset_jp.py
