[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msx-charset"
version = "0.1.1"
authors = [
    {name = "yamamo-to", email = "humorum@gmail.com"}
]
description = "MSX character set codecs for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"

[tool.setuptools]
packages = ["msx_charset"]
license-files = []

[tool.pytest.ini_options]
testpaths = ["msx_charset/tests"]
python_files = ["test_*.py"] 

[project.urls]
Repository = "https://github.com/yamamo-to/msx-charset"
Issue = "https://github.com/yamamo-to/msx-charset/issues"

