[build-system]
requires = ["setuptools>=65.5.0", "wheel", "setuptools_scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msx-charset"
dynamic = ["version"]
authors = [
    {name = "yamamo-to", email = "humorum@gmail.com"}
]
description = "MSX character set codecs for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license-files = ["LICEN[CS]E*"]

[tool.setuptools]
packages = ["msx_charset"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools_scm]
write_to = "msx_charset/_version.py"
local_scheme = "no-local-version"

[project.urls]
Repository = "https://github.com/yamamo-to/msx-charset"
Issue = "https://github.com/yamamo-to/msx-charset/issues"

